--- a/app.json
+++ b/app.json
@@ -16,10 +16,7 @@
         "expo-image-picker",
         {
           "photosPermission": "custom photos permission",
-          "cameraPermission": "Allow $(PRODUCT_NAME) to open the camera",
-
-          "//": "Disables the microphone permission",
-          "microphonePermission": false
+          "cameraPermission": "Allow $(PRODUCT_NAME) to open the camera"
         }
       ]
     ],
@@ -33,10 +30,24 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permission": [
+        "android.permission.CAMERA",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE"
+      ],
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "com.johandev.appdelivery"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "20bb0780-2af0-44ba-b20b-6a25000f0139"
+      }
     }
   }
 }
