--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "@types/react-native": "~0.70.6",
     "axios": "^1.3.5",
     "expo": "^47.0.13",
-    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.8",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "expo-image-picker": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
