--- a/package.json
+++ b/package.json
@@ -9,19 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@firebase/storage": "^0.11.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-firebase/app": "^17.4.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "@types/firebase": "^3.2.1",
     "@types/react-native": "~0.70.6",
     "axios": "^1.3.5",
     "expo": "^47.0.13",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.19.1",
     "react": "18.1.0",
     "react-native": "0.70.8",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "expo-image-picker": "~14.0.2"
+    "react-native-screens": "~3.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
