--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@firebase/storage": "^0.11.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-firebase/app": "^17.4.2",
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
@@ -24,11 +25,11 @@
     "firebase": "^9.19.1",
     "react": "18.1.0",
     "react-native": "0.70.8",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-reanimated-carousel": "^3.3.0",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-gesture-handler": "~2.8.0",
-    "react-native-reanimated": "~2.12.0"
+    "react-native-screens": "~3.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
