--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-reanimated-carousel": "^3.3.0",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@types/react": "~18.0.24",
+    "@types/uuid": "^9.0.1",
     "typescript": "^4.6.3"
   },
   "private": true
